--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
       <p>
        Panduan memasarkan hasil tani secara online.
       </p>
-      <button class="cta-button" onclick="window.location.href='Materi.html'">
+      <button class="cta-button" onclick="window.location.href='materi.html'">
         pelajari
       </button>
      </div>
